--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,16 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Task cli Installation
+      run: go install github.com/go-task/task/v3/cmd/task@latest
+
+    - name : Setup docker stack
+      run: task local-db && sleep 45
 
     - name: Test
       run: go test -v ./...
+
+    - name: Build
+      run: go build -v ./...
+
+    
