--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,12 +17,12 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: '1.22.x'
 
     - name: Task cli Installation
-      run: go install github.com/go-task/task/v3/cmd/task@latest
+      run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
 
     - name : Setup docker stack
       run: task local-db && sleep 45
