--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,10 +19,18 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.22.x'
+
+    - name: Task cli Installation
+      run: go install github.com/go-task/task/v3/cmd/task@latest
+
+    - name : Setup docker stack
+      run: task local-db && sleep 45
+
+    - name: Test
+      run: go test -v ./...
 
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+    
