--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,14 +12,14 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted #ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.20'
+        go-version: 'stable'
 
     - name: Task cli Installation
       run: go install github.com/go-task/task/v3/cmd/task@latest
